combine functionality in big logreposit-api service, but make it conditionally to enable